kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: devops-frontend
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
  name: devops-frontend
