kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-frontend
  name: tasksappui
  labels:
    app: tasksappui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasksappui
  template:
    metadata:
      labels:
        app: tasksappui
    spec:
      containers:
      - name: tasksappui
        image: < ADD YOUR IMAGE REPO HERE >
        ports:
        - containerPort: 80
        imagePullPolicy: Always
