kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: tasksappui-svc
  annotations:
    app.access.url: <ACCESS_URL>
spec: 
  type: ClusterIP
  ports: 
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tasksappui
