kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: app-ingress
   annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  rules:
  - host: < ADD YOUR HOST HERE >
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasksappui-svc
            port:
              number: 80
  tls:
    - hosts:
        -  demo-be.zohebk8s.com
      secretName: devops-secret
